# fast_cpp_server

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build.sh
cmake/: setup_cpack.cmake  setup_dependencies.cmake  setup_tests.cmake
config/: config.ini  config.json  mosquitto.conf
docs/desgin_document/: DATETIME_TOOLS_DESIGN_AND_HANDBOOK.md  FastMQTT_design_document.md  FastMQTT_hand_book.md  IP_Tools_Design.md  MY_AIRDROP_LOCK_DESIGN_AND_HANDBOOK.md  MY_SERIAL_DESIGN_AND_HANDBOOK.md  My_MQTT_hand_book.md  my_comm_module_design.md
scripts/: build_mavsdk_v3.sh  install-system.sh  install-user.sh  install.sh  start-system.sh  start-user.sh  start.sh  uninstall-system.sh  uninstall-user.sh  uninstall.sh
service/: fast_cpp_server.service
src/: CMakeLists.txt  main.cpp
src/tools/example/: mavsdk_utils.cpp  mavsdk_utils.h
src/tools/pipeline/: Pipeline.cpp  Pipeline.h
src/util/my_airdrop_lock/: CMakeLists.txt  my_airdrop_lock.cpp  my_airdrop_lock.h
src/util/my_api/: BaseApiController.cpp  BaseApiController.hpp  CMakeLists.txt  MyAPI.cpp
src/util/my_api/controller/airdrop_lock/: AirdropLockController.cpp  AirdropLockController.h
src/util/my_api/controller/audio/: AudioController.cpp  AudioController.h
src/util/my_api/controller/context/: ContextController.cpp  ContextController.h
src/util/my_api/controller/demo/edge_manager/: EdgeController.cpp  EdgeController.hpp
src/util/my_api/controller/demo/edges/: EdgesController.cpp  EdgesController.hpp
src/util/my_api/controller/demo/tuna/: TunaController.cpp  TunaController.h
src/util/my_api/controller/fast_mqtt/: FastMQTTController.cpp  FastMQTTController.h
src/util/my_api/controller/gas_detector/: GasDetectorController.cpp  GasDetectorController.h
src/util/my_api/controller/heartbeat_manager/: HeartBeatController.cpp  HeartBeatController.h
src/util/my_api/controller/script/: ScriptController.cpp  ScriptController.h
src/util/my_api/controller/soft_healthy/: SoftHealthyController.cpp  SoftHealthyController.h
src/util/my_api/dto/airdrop_lock/: AirdropLockDto.hpp
src/util/my_api/dto/context/: ContextDto.hpp
src/util/my_api/dto/demo/: EdgeStatusDto.hpp  TaskDto.hpp
src/util/my_api/dto/gas_detector/: GasDetectorDto.hpp
src/util/my_api/validators/: RequestValidators.hpp
src/util/my_audio/: MyAudios.cpp  MyAudios.h  NAudio.cpp  NAudio.h
src/util/my_audio/NAudioCore/: NAudioCore.cpp
src/util/my_comm/: CMakeLists.txt  MyComm.cpp  MyComm.h
src/util/my_comm/mqtt/2536pb/: CSY2536CallBackFuncs.cpp  CSY2536CallBackFuncs.h  CSY2536Comm.cpp  CSY2536Comm.h
src/util/my_comm/mqtt/json/: JsonCallBackFuncs.cpp  JsonCallBackFuncs.h  JsonComm.cpp  JsonComm.h
src/util/my_context/: CMakeLists.txt  MyContext.cpp  MyContext.h
src/util/my_control/: TaskQueue.h
src/util/my_control/demo/: Workflow.cpp
src/util/my_data/demo/: Task.h
src/util/my_edge/: BaseEdge.cpp  BaseEdge.h  CMakeLists.txt  IEdge.h  MyEdge.cpp  MyEdgeManager.cpp  MyEdgeManager.h  MyEdges.cpp  MyEdges.h  MyMavVehicle.cpp  MyMavVehicle.h
src/util/my_edge/demo/: TUNAEdge.cpp  TUNAEdge.h  UAVEdge.cpp  UAVEdge.h  UUVEdge.cpp  UUVEdge.h
src/util/my_edge_manager/: MyEdgeManager.cpp
src/util/my_fast_MQTT/: BlockingQueue.hpp  CMakeLists.txt  FastMQTT.cpp  FastMQTT.hpp  FastMQTTTypes.hpp
src/util/my_fly_control/: MyFlyControlManager.h
src/util/my_gas_detector_poll/: CMakeLists.txt  MyGasDetectorData.cpp  MyGasDetectorData.h  MyGasDetectorPoll.cpp  MyGasDetectorPoll.h  MyGasDetectorPollConfig.cpp  MyGasDetectorPollConfig.h  MyGasDetectorPollInternal.h
src/util/my_heartbeat/: CMakeLists.txt  MyHeartbeatManager.cpp  MyHeartbeatManager.h
src/util/my_light/: SearchlightManager.cpp  SearchlightManager.h
src/util/my_math/: CMakeLists.txt
src/util/my_mediamtx_monitor/: CMakeLists.txt
src/util/my_mediamtx_monitor/v1/: RtspRelayMonitor.cpp  RtspRelayMonitor.h  RtspRelayMonitorManager.cpp  RtspRelayMonitorManager.h
src/util/my_mediamtx_monitor/v2/: PodConfig.cpp  PodConfig.h  PodStreamManager.cpp  PodStreamManager.h
src/util/my_mqtt/: CMakeLists.txt  IMqttPublisher.hpp  MosqPublisher.cpp  MosqPublisher.hpp  MqttService.cpp  MqttService.hpp
src/util/my_mqtt_broker_manager/: CMakeLists.txt  MyMqttBrokerManager.cpp  MyMqttBrokerManager.h
src/util/my_pod/manager/: pod_manager.cpp  pod_manager.h
src/util/my_script/: CMakeLists.txt  MyScriptManager.cpp  MyScriptManager.h
src/util/my_script/bash/: MyBashEnvBot.cpp  MyBashEnvBot.h
src/util/my_script/py3/: MyPyEnvBot.cpp  MyPyEnvBot.h  bot.py
src/util/my_serial/: MySerial.cpp  MySerial.h
src/util/my_soft_healthy/: CMakeLists.txt  ProcessInfoCollector.cpp  ProcessInfoCollector.h  ResourceUsageAnalyzer.cpp  ResourceUsageAnalyzer.h  SoftHealthMonitorConfig.cpp  SoftHealthMonitorConfig.h  SoftHealthMonitorManager.cpp  SoftHealthMonitorManager.h  SoftHealthSnapshot.cpp  SoftHealthSnapshot.h  ThreadInfoCollector.cpp  ThreadInfoCollector.h
src/util/my_system_healthy/: MySystemHealthyManager.cpp
src/util/my_tools/: CMakeLists.txt  MyDateTime.cpp  MyDateTime.h  MyTimer.cpp  MyTimer.h  MyTools.cpp  MyTools.h
test/util/my_fast_MQTT/: TestBlockingQueue.cpp  TestFastMQTT.cpp
test/util/my_mqtt/: TestMFMQTTClient.cpp  TestMFMQTTManager.cpp  TestMFMQTTServer.cpp  TestMFSMQTTClient.cpp
test/util/my_script/: test_my_script.cpp
test/util/my_soft_healthy/: TestSoftHealthMonitorConfig.cpp  TestSoftHealthMonitorManager.cpp
test/util/my_tools/: TestDateTimeTools.cpp
